--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,3 +34,5 @@ html
       block content
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.1/axios.min.js')
+    block scripts
