--- a/views/post.pug
+++ b/views/post.pug
@@ -6,7 +6,7 @@ block content
     li
       a(href='/') Home
     li(style='padding-left: 5px')
-      a(href='/topic/' + post.topic_id) #{post.topic.name}
+      a(href='/topic/' + topic.topic_id) #{topic.name}
     li(style='padding-left: 5px').active #{post.title}
     
   h3 #{post.title}
@@ -16,9 +16,9 @@ block content
   != post.text
   hr
       
-  form
+  form(method='post')
     .form-group
-      textarea.form-control(rows=5, placeholder='Send a reply...')
+      textarea.form-control(name='text',rows=5, placeholder='Send a reply...')
     button.btn.btn-primary Submit Reply
     span.pull-right 0 / 1000 
     
@@ -27,7 +27,8 @@ block content
     .list-group
       each reply in post.replies
         .list-group-item
-          != reply.text
           span 
             a(href='/users/'+reply.user_id) #{reply.user.username} 
             span  &middot; #{reply.date.fromNow()}
+          .reply-text
+            != reply.text
