--- a/views/error.pug
+++ b/views/error.pug
@@ -3,4 +3,4 @@ extends layout.pug
 block content
   .well.well-lg.text-center
     h1 Oops!
-    h5.text-uppercase #{message}
+    h5.text-uppercase Error: #{error}
