--- a/views/user.pug
+++ b/views/user.pug
@@ -5,49 +5,31 @@ block content
   .row
     
     .col-md-6
+      
       .panel.panel-default
         .panel-heading User Information
         .panel-body
-          if profile
-            form
-              button.btn.btn-primary.pull-right Edit Profile
-              .form-group
-                label Username
-                p #{user.username}
-              .form-group
-                label Email Address
-                p #{user.email_address}
-              .form-group
-                label Joined
-                p #{user.date.format('MMMM D, YYYY')}
-              .form-group
-                label Biography
-                p #{user.biography}
-          else
-            form
-              a.btn.btn-primary.pull-right(href='/create?type=message&to='+user.username) Send a message to #{user.username}
-              .form-group
-                label Username
-                p #{user.username}
-              .form-group
-                label Joined
-                p #{user.date.format('MMMM D, YYYY')}
-              .form-group
-                label Last seen 
-                p #{user.login.format('MMMM D, YYYY')}
-              .form-group
-                label Biography
-                p #{user.biography}
+          form
+            a.btn.btn-primary.pull-right(href='/create?type=message&to='+user.username) Send a message to #{user.username}
+            .form-group
+              label Username
+              p #{user.username}
+            .form-group
+              label Joined
+              p #{user.date.format('MMMM D, YYYY')}
+            .form-group
+              label Biography
+              != user.bio
               
     .col-md-6
-  
+
       .panel.panel-default
         .panel-heading Topics Created
         .list-group
           if topics.length
             each topic in topics
               .list-group-item
-                a.list-group-item-heading(href='/topic/'+topic.topic_id) #{topic.name}
+                a.list-group-item-heading(href='/topics/'+topic.id) #{topic.name}
           else
             .list-group-item
               .text-center This user has not created any topics  
@@ -57,7 +39,8 @@ block content
         .list-group
           if posts.length
             each post in posts
-              +post(post)
+              .list-group-item
+                a.list-group-item-heading(href='/posts/'+post.id) #{post.title}
           else
             .list-group-item
               .text-center This user has not created any posts
