--- a/views/login.pug
+++ b/views/login.pug
@@ -9,34 +9,34 @@ block content
         .panel-heading
           span Sign up for an account
         .panel-body
-          form.center-block
+          form#signup.center-block
             .form-group
               label Username
-              input.form-control
+              input.form-control(name='username')
             .form-group
               label Email Address
-              input.form-control
+              input.form-control(name='email')
             .form-group
               label Confirm Email Address
               input.form-control
             .form-group
               label Password
-              input.form-control
+              input.form-control(type='password',name='password')
             .form-group
               label Confirm Password
-              input.form-control
-          button.btn.btn-primary.pull-right Signup
+              input.form-control(type='password')
+            button.btn.btn-primary.pull-right Signup
           
     .col-xs-5
       .panel.panel-default
         .panel-heading
           span Log in
         .panel-body
-          form.center-block
+          form#login.center-block
             .form-group
               label Username
-              input.form-control
+              input.form-control(name='username')
             .form-group
               label Password
-              input.form-control
-          button.btn.btn-primary.pull-right Login
+              input.form-control(type='password',name='password')
+            button.btn.btn-primary.pull-right Login
