--- a/views/topic.pug
+++ b/views/topic.pug
@@ -12,9 +12,14 @@ block content
     .col-md-8
       .panel.panel-success
         .panel-heading Stickied Posts
-        .list-group
-          each post in posts.slice(0, 2)
-            +post(post)
+        if stickied.length
+          .list-group
+            each post in stickied
+              +post(post)
+        else
+          .panel-body
+            .text-center There are no stickied posts for this topic
+            
       .list-group
         each post in posts
           +post(post)
@@ -26,7 +31,26 @@ block content
         .panel-heading Topic Information
         .panel-body
           h3(style='margin-top: 0') #{topic.name}
-          p #{topic.description}
+          != topic.description.md
           p Created on #{topic.date.format('MMMM D, YYYY')} by 
-            a(href='/user/'+topic.user_id) #{topic.user.username}
+            a(href='/users/'+topic.user.id) #{topic.user.username}
       a.btn.btn-default.btn-block(role='button', href='/create?type=topic') Create your own topic
+      
+      br
+      
+      .login-required.panel.panel-default
+        .panel-heading Edit Topic
+        .panel-body
+          form(action='/topics/'+topic.id,method='post')
+            input(hidden,name='topic',value=topic.id)
+            .form-group
+              label Name
+              input.form-control(name='name',value=topic.name)
+            .form-group
+              label Description
+              textarea.form-control(name='description',rows='10') #{topic.description.raw}
+            button.btn.btn-primary Update Topic
+          
+      form.login-required(action='/topics/'+topic.id+'/delete',method='post')
+        input(hidden,name='id',value=topic.id)
+        button.btn.btn-danger.btn-block Delete Topic
